# crowley

./: .env  Cargo.toml  README.md  setup.sh
db/: init.sql
src/: count.rs  db.rs  lib.rs  list.rs  main.rs  routes.rs  scrape.rs  url_encoded.rs
testing/: count_1.http  list_1.http  scrape_1.http  scrape_localhost.http
tests/: acceptance.rs
tests/page/: index.html  page_1.html  page_2.html
tests/page/something/: test.html
