[package]
name = "crowley"
version = "0.1.0"
authors = ["Jakub Trąd <jakubtrad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde =  { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
warp = "0.3.0"
sqlx = { version = "0.5.1", features = ["runtime-tokio-rustls", "sqlite"] }
log = "0.4.13"
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
url = "2.2.0"
hyper = "0.14.2"
anyhow = "1.0.38"
scraper = "0.12.0"
tokio = { version = "1.2.0", features = ["full"] }
reqwest = { version = "0.11.1", features = ["json"] }
urlencoding = "1.1.1"
futures = "0.3.13"

[dev-dependencies]
maplit = "1.0.2"
indoc = "1.0.3"
cmd_lib = "0.11.6"
test-case = "1.1.0"
